update security and add https

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,4 @@
+# nginx file server to serve archive files
 server 
 {
     listen       80;
@@ -44,4 +45,54 @@ server
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
     }
+}
+
+# Forwards request to file server
+# Only accepts https request at port 8080
+server {
+    listen 8080 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/archivebrowser.crt;
+    ssl_certificate_key /etc/nginx/ssl/archivebrowser.key;
+    
+    location / {
+        proxy_pass http://localhost:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# Forwards request to frontend, using internal docker network
+# Accepts both http and https request on port 3000
+server {
+    listen 3000 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/archivebrowser.crt;
+    ssl_certificate_key /etc/nginx/ssl/archivebrowser.key;
+    
+    # Redirect on the same port
+    error_page 497 301 =307 https://$host:$server_port$request_uri;
+    
+    location / {
+        proxy_pass http://archive-browser:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# Forwards request to elastic, using internal docker network (http)
+upstream elasticsearch {
+    server elastic:9200;
+}
+server {
+  listen 9200;
+  location / {
+      proxy_pass http://elasticsearch;
+  }
 }
