--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,9 @@ services:
     environment:
       # TODO: Update this URL to point to your fileserver.
       # Make sure it's accessible from your browser
-      - DRIVE_BASE_URL=http://localhost:8080
+      - DRIVE_BASE_URL=https://${SERVER_HOSTNAME}:8080
       - ES_BACKEND_URL=http://elastic:9200
       - ENABLE_SIGN_URLS=false
-    ports:
-      - 3000:3000
     networks:
       - ragtag-archive
     volumes:
@@ -32,8 +30,6 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     volumes:
       - esdata:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
     networks:
       - ragtag-archive
     healthcheck:
@@ -49,9 +45,15 @@ services:
       # TODO: update mount point to where your files will be stored
       - nginxdata:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ${SECRETS_LOCATION}:/etc/nginx/ssl
       - /media/tenvinc/a00e3fc5-9ff4-4909-a253-c9ecebb2faaa/Hololive/MinatoAqua:/usr/share/nginx/archive
     ports:
-      - 8080:80
+      - 3000:3000    # Frontend
+      - 8080:8080    # Nginx file server
+      - 9200:9200    # Elastic search
+    depends_on:
+      archive-browser:
+        condition: service_started
     networks:
       - ragtag-archive
 
